--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-facebook-audnet-sdk",
-  "version": "1.0.0-beta",
+  "version": "4.7.0",
   "description": "Add Facebook AudienceNetwork SDK to Cordova porject, as dependency for other plugins",
   "cordova": {
     "id": "cordova-facebook-audnet-sdk",
