update sdk to v4.22.1

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-facebook-audnet-sdk"
-        version="4.22.1">
+        version="4.22.2">
       
     <name>Facebook AudienceNetwork SDK for Cordova</name>
     <description>Add Facebook SDK to Cordova porject, as dependency for other plugins</description>
@@ -13,15 +13,19 @@
     <issue>https://github.com/floatinghotpot/cordova-facebook-audnet-sdk/issues</issue>
 
     <engines>
-        <engine name="cordova" version=">=3.0" />
+      <engine name="cordova" version=">=6.4.0"/>
+      <engine name="cordova-android" version=">=6.0.0"/>
+      <engine name="cordova-ios" version=">=4.3.0"/>
     </engines>
 
     <platform name="android">
-        <source-file src="AudienceNetwork.jar" target-dir="libs" />
+      <framework src="com.google.android.gms:play-services-ads:+"/>
+      <framework src="com.facebook.android:audience-network-sdk:+"/>
      </platform>
      
     <platform name="amazon-fireos">
-        <source-file src="AudienceNetwork.jar" target-dir="libs" />
+      <framework src="com.google.android.gms:play-services-ads:+"/>
+      <framework src="com.facebook.android:audience-network-sdk:+"/>
      </platform>
 
      <platform name="ios">
