--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-facebook-audnet-sdk"
-        version="4.23.0">
+        version="4.26.0">
       
     <name>Facebook AudienceNetwork SDK for Cordova</name>
     <description>Add Facebook SDK to Cordova porject, as dependency for other plugins</description>
@@ -29,7 +29,11 @@
      </platform>
 
      <platform name="ios">
-         <framework src="FBAudienceNetwork.framework" custom="true" />
+      <!-- FBAudienceNetwork in cocapods is not up to date, so we still download the SDK -->
+      <framework src="FBAudienceNetwork.framework" custom="true" />
+
+      <!-- required cordova 6.4.0 or higher -->
+      <!-- framework src="FBAudienceNetwork" type="podspec" spec="~> 4.26.0"/ -->
     </platform>
 
 </plugin>
