--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,8 @@
   <platform name="android">
     <framework src="fb-adsdk.gradle" custom="true" type="gradleReference" />
     <framework src="com.facebook.android:audience-network-sdk:4.+"/>
-    <framework src="com.google.android.gms:play-services-ads:+"/>
+    <preference name="PLAY_SERVICES_VERSION" default="+"/>
+    <framework src="com.google.android.gms:play-services-ads:$PLAY_SERVICES_VERSION"/>
   </platform>
      
   <platform name="amazon-fireos">
