--- a/plugin.xml
+++ b/plugin.xml
@@ -20,14 +20,14 @@
 
   <platform name="android">
     <framework src="fb-adsdk.gradle" custom="true" type="gradleReference" />
-    <framework src="com.facebook.android:audience-network-sdk:4.+"/>
+    <framework src="com.facebook.android:audience-network-sdk:4.28.2"/>
     <preference name="PLAY_SERVICES_VERSION" default="+"/>
     <framework src="com.google.android.gms:play-services-ads:$PLAY_SERVICES_VERSION"/>
   </platform>
      
   <platform name="amazon-fireos">
     <framework src="fb-adsdk.gradle" custom="true" type="gradleReference" />
-    <framework src="com.facebook.android:audience-network-sdk:4.+"/>
+    <framework src="com.facebook.android:audience-network-sdk:4.28.2"/>
     <framework src="com.google.android.gms:play-services-ads:+"/>
   </platform>
 
