--- a/plugin.xml
+++ b/plugin.xml
@@ -21,14 +21,15 @@
   <platform name="android">
     <framework src="fb-adsdk.gradle" custom="true" type="gradleReference" />
     <framework src="com.facebook.android:audience-network-sdk:4.28.2"/>
-    <preference name="PLAY_SERVICES_VERSION" default="+"/>
+    <preference name="PLAY_SERVICES_VERSION" default="15.0.0"/>
     <framework src="com.google.android.gms:play-services-ads:$PLAY_SERVICES_VERSION"/>
   </platform>
      
   <platform name="amazon-fireos">
     <framework src="fb-adsdk.gradle" custom="true" type="gradleReference" />
     <framework src="com.facebook.android:audience-network-sdk:4.28.2"/>
-    <framework src="com.google.android.gms:play-services-ads:+"/>
+    <preference name="PLAY_SERVICES_VERSION" default="15.0.0"/>
+    <framework src="com.google.android.gms:play-services-ads:$PLAY_SERVICES_VERSION"/>
   </platform>
 
   <platform name="ios">
